--- a/public/css/acciones.css
+++ b/public/css/acciones.css
@@ -32,3 +32,18 @@
 .eliminar{
     color:rgb(216, 13, 13);
 }
+
+
+.circle_green {
+    background: rgb(30, 197, 47);
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+}
+
+.circle_grey {
+    background: rgb(169, 169, 169);
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+}
