--- a/public/css/acciones.css
+++ b/public/css/acciones.css
@@ -47,3 +47,14 @@
     width: 100px;
     height: 100px;
 }
+
+.modal-full {
+    min-width: 100%;
+    min-height: 100%;
+    margin: 0;
+}
+
+.modal-full .modal-content {
+    min-height: 100%;
+    border-radius: 0;
+}
