--- a/public/css/principal-nueva.css
+++ b/public/css/principal-nueva.css
@@ -155,7 +155,7 @@ nav {
     color: #004a99;
 }
 
-#powerbi-principal{
+#powerbi-principal {
     margin-left: 128px;
 }
 
@@ -193,15 +193,22 @@ nav {
 
 
 
-#internos-principal{
-    margin-left:130px;
+#internos-principal {
+    margin-left: 130px;
 }
-#calendario-principal{
-    margin-left:107px;
+
+#calendario-principal {
+    margin-left: 107px;
 }
-#documentos-principal{
-    margin-left:98px;
+
+#documentos-principal {
+    margin-left: 98px;
 }
+
+#novedades-principal {
+    margin-left: 108px;
+}
+
 #powerbi-principal2 {
     margin-left: 107px;
 }
@@ -236,7 +243,7 @@ nav {
 
 /*LUEGO DE LOGUEARSE*/
 .authenticated .nav-btn {
-    margin-top: -5px;
+    margin-top: -7px;
 }
 
 .authenticated .carousel-item img {
@@ -260,7 +267,7 @@ nav {
 
 .authenticated .carousel-container {
     height: 550px;
-    margin-top: -330px;
+    margin-top: -380px;
 }
 
 .authenticated .carousel-container img {
@@ -292,7 +299,7 @@ nav {
     text-align: center;
     height: 330px;
     width: 300px;
-    margin-top: 65px;
+    margin-top: 10px;
 }
 
 .login h2 {
@@ -373,7 +380,7 @@ nav {
 /*CAROUSEL*/
 .carousel-container {
     position: absolute;
-    margin-top: -380px;
+    margin-top: -425px;
     margin-left: 382px;
     width: 77%;
     max-height: 340px;
@@ -411,7 +418,7 @@ nav {
 }
 
 .novedades h1 {
-    margin-top: 53px;
+    margin-top: 0px;
     /*53*/
     margin-bottom: 10px;
     color: #196AB2;
@@ -548,7 +555,7 @@ footer p {
     nav {
         position: absolute;
         left: -7px;
-        top: 100px;
+        margin-top: -10px;
         display: flex;
         /*Flex para apilar botones */
         flex-direction: column;
@@ -556,16 +563,28 @@ footer p {
         margin-bottom: 20px;
     }
 
+    .authenticated nav {
+        margin-top: 20px;
+        gap: 10px;
+    }
+
     .nav-btn {
-        display: none;
+
         /* Oculta el contenido del */
     }
 
     .nav-btn {
         width: 250px;
-        margin-bottom: 10px;
+        margin-bottom: 0px;
         text-decoration: none;
     }
+
+    .authenticated .nav-group {
+        margin-top: 246px;
+        gap: 10px;
+    }
+
+    .authenticated .nav-btn {}
 
     .login {
         position: absolute;
@@ -588,7 +607,7 @@ footer p {
     }
 
     .authenticated .novedades h1 {
-        margin-top: 300px;
+        margin-top: 320px;
     }
 
     .cards-contenedor {
@@ -610,9 +629,11 @@ footer p {
         width: 280px;
         height: 300px;
     }
-    .authenticated .card{
+
+    .authenticated .card {
         height: 300px;
     }
+
     .authenticated .cards-contenedor {
         gap: 50px;
         margin-top: 15px;
@@ -621,7 +642,7 @@ footer p {
 
     .carousel-container {
         position: absolute;
-        margin-top: -80px;
+        margin-top: -120px;
         margin-left: 320px;
         width: 70%;
         max-height: 300px;
@@ -632,7 +653,7 @@ footer p {
     }
 
     .authenticated .carousel-container {
-        margin-top: -150px;
+        margin-top: -120px;
     }
 
     #carousel-item-chico img {
@@ -660,6 +681,7 @@ footer p {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        /* Alinea a la izquierda */
         margin: 40px 20px;
     }
 
@@ -672,26 +694,41 @@ footer p {
     nav {
         position: absolute;
         left: -7px;
-        top: 100px;
+        margin-top: -10px;
         display: flex;
+        /*Flex para apilar botones */
         flex-direction: column;
         align-items: flex-start;
         margin-bottom: 20px;
     }
 
+    .authenticated nav {
+        margin-top: 20px;
+        gap: 10px;
+    }
+
     .nav-btn {
-        display: none;
+
+        /* Oculta el contenido del */
     }
 
     .nav-btn {
         width: 250px;
-        margin-bottom: 10px;
+        margin-bottom: 0px;
+        text-decoration: none;
     }
+
+    .authenticated .nav-group {
+        margin-top: 246px;
+        gap: 10px;
+    }
+
+    .authenticated .nav-btn {}
 
     .login {
         position: absolute;
         left: 20px;
-        margin-top: 40px;
+        top: 400px;
     }
 
     .novedades {
@@ -705,19 +742,22 @@ footer p {
 
     .novedades h1 {
         font-size: 28px;
-        margin-top: 20px;
-        margin-left: 90px;
+        margin-left: 130px;
+    }
+
+    .authenticated .novedades h1 {
+        margin-top: 320px;
     }
 
     .cards-contenedor {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        gap: 30px;
+        gap: 50px;
         max-width: 1000px;
         margin: 0 auto;
         margin-bottom: 40px;
-        margin-left: -20px;
+        margin-left: 0px;
 
     }
 
@@ -731,19 +771,19 @@ footer p {
 
     .authenticated .card {
         height: 300px;
-
     }
 
     .authenticated .cards-contenedor {
         gap: 50px;
+        margin-top: 15px;
 
     }
 
     .carousel-container {
         position: absolute;
-        margin-top: -90px;
+        margin-top: -120px;
         margin-left: 320px;
-        width:70%;
+        width: 70%;
         max-height: 300px;
         height: 800px;
         z-index: 2;
@@ -751,9 +791,12 @@ footer p {
         border-radius: 10px;
     }
 
+    .authenticated .carousel-container {
+        margin-top: -120px;
+    }
 
-    .carousel-item img {
-        height: 270px;
+    #carousel-item-chico img {
+        height: 150px;
         object-fit: cover;
         border-radius: 10px;
     }
@@ -777,6 +820,7 @@ footer p {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        /* Alinea a la izquierda */
         margin: 40px 20px;
     }
 
@@ -789,33 +833,47 @@ footer p {
     nav {
         position: absolute;
         left: -7px;
-        top: 100px;
+        margin-top: -10px;
         display: flex;
+        /*Flex para apilar botones */
         flex-direction: column;
         align-items: flex-start;
         margin-bottom: 20px;
     }
 
+    .authenticated nav {
+        margin-top: 20px;
+        gap: 10px;
+    }
+
     .nav-btn {
-        display: none;
+
+        /* Oculta el contenido del */
     }
 
     .nav-btn {
         width: 250px;
-        margin-bottom: 10px;
+        margin-bottom: 0px;
+        text-decoration: none;
     }
+
+    .authenticated .nav-group {
+        margin-top: 246px;
+        gap: 10px;
+    }
+
+    .authenticated .nav-btn {}
 
     .login {
         position: absolute;
         left: 20px;
-        margin-top: 40px;
+        top: 400px;
     }
 
     .novedades {
         width: 100%;
         text-align: center;
         margin: 200px 350px 100px;
-        margin-left: 300px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -823,22 +881,22 @@ footer p {
 
     .novedades h1 {
         font-size: 28px;
-        margin-left: 140px;
+        margin-left: 130px;
     }
 
     .authenticated .novedades h1 {
-        margin-top: 25px;
+        margin-top: 320px;
     }
 
     .cards-contenedor {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        gap: 30px;
+        gap: 50px;
         max-width: 1000px;
         margin: 0 auto;
         margin-bottom: 40px;
-        margin-left: 20px;
+        margin-left: 0px;
 
     }
 
@@ -850,17 +908,19 @@ footer p {
         height: 300px;
     }
 
-    .authenticated .cards-contenedor {
-        gap: 50px;
+    .authenticated .card {
+        height: 300px;
     }
 
-    .authenticated .novedades {
-        margin-top: 225px;
+    .authenticated .cards-contenedor {
+        gap: 50px;
+        margin-top: 15px;
+
     }
 
     .carousel-container {
         position: absolute;
-        margin-top: -90px;
+        margin-top: -120px;
         margin-left: 320px;
         width: 70%;
         max-height: 300px;
@@ -870,9 +930,12 @@ footer p {
         border-radius: 10px;
     }
 
+    .authenticated .carousel-container {
+        margin-top: -120px;
+    }
 
-    .carousel-item img {
-        height: 270px;
+    #carousel-item-chico img {
+        height: 150px;
         object-fit: cover;
         border-radius: 10px;
     }
@@ -887,12 +950,6 @@ footer p {
 
     .footer {
         position: relative;
-        font-family: Inter;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 19.36px;
-        text-align: left;
-
     }
 
 
