--- a/public/css/principal-nueva.css
+++ b/public/css/principal-nueva.css
@@ -41,7 +41,6 @@ header {
 
 .btn-cerrar-sesion {
     margin-left: 120px;
-
 }
 
 /* CONTAINER LOGIN Y NOVEDADES */
@@ -94,7 +93,6 @@ header .logo img {
     max-width: 400px;
 }
 
-
 /* NAV CON BOTONES */
 nav {
     display: flex;
@@ -102,15 +100,11 @@ nav {
     align-items: flex-start;
     margin: 20px 0;
     gap: 2px;
-
 }
-
 
 .nav-buttons {
     margin-top: -93px;
     margin-left: -30px;
-
-
 }
 
 .nav-buttons a {
@@ -205,10 +199,6 @@ nav {
     margin-left: 98px;
 }
 
-#novedades-principal {
-    margin-left: 108px;
-}
-
 #powerbi-principal2 {
     margin-left: 107px;
 }
@@ -243,13 +233,12 @@ nav {
 
 /*LUEGO DE LOGUEARSE*/
 .authenticated .nav-btn {
-    margin-top: -7px;
+    margin-top: -5px;
 }
 
 .authenticated .carousel-item img {
     height: 180px;
     object-fit: cover;
-
 }
 
 .authenticated .novedades {
@@ -267,7 +256,7 @@ nav {
 
 .authenticated .carousel-container {
     height: 550px;
-    margin-top: -380px;
+    margin-top: -330px;
 }
 
 .authenticated .carousel-container img {
@@ -299,7 +288,7 @@ nav {
     text-align: center;
     height: 330px;
     width: 300px;
-    margin-top: 10px;
+    margin-top: 65px;
 }
 
 .login h2 {
@@ -311,8 +300,6 @@ nav {
     font-weight: 900;
     line-height: 22.99px;
     text-align: center;
-
-
 }
 
 .login label {
@@ -324,7 +311,6 @@ nav {
     font-weight: 500;
     line-height: 19.36px;
     text-align: center;
-
 }
 
 .login input {
@@ -344,21 +330,18 @@ nav {
     cursor: pointer;
     margin-top: 5px;
     width: 110px;
-
     height: 35px;
     top: 642px;
     left: 98px;
     gap: 0px;
     border-radius: 10px 10px 10px 10px;
     opacity: 0px;
-
     font-family: Inter;
     font-size: 16px;
     font-weight: 800;
     line-height: 19.36px;
     letter-spacing: 0.01em;
     text-align: center;
-
 }
 
 .login button:hover {
@@ -380,7 +363,7 @@ nav {
 /*CAROUSEL*/
 .carousel-container {
     position: absolute;
-    margin-top: -425px;
+    margin-top: -380px;
     margin-left: 382px;
     width: 77%;
     max-height: 340px;
@@ -388,10 +371,7 @@ nav {
     z-index: 2;
     overflow: hidden;
     border-radius: 10px;
-
 }
-
-
 
 .carousel-item img {
     height: 340px;
@@ -418,7 +398,7 @@ nav {
 }
 
 .novedades h1 {
-    margin-top: 0px;
+    margin-top: 53px;
     /*53*/
     margin-bottom: 10px;
     color: #196AB2;
@@ -427,8 +407,6 @@ nav {
     text-align: center;
     width: 100%;
     font-family: Arial;
-
-
 }
 
 .cards-contenedor {
@@ -449,7 +427,6 @@ nav {
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
 }
 
 .card-title {
@@ -473,8 +450,6 @@ nav {
 .botones-cards {
     display: flex;
     gap: 5px;
-
-
 }
 
 .botones-cards a {
@@ -483,7 +458,6 @@ nav {
     padding: 10px;
     text-decoration: none;
     height: 40px;
-
 }
 
 /* FOOTER */
@@ -503,7 +477,6 @@ footer p {
     margin: 0;
     padding: 0;
 }
-
 
 /*DESPLEGABLE BARRA DE BUSQUEDA*/
 .results-dropdown {
@@ -531,10 +504,6 @@ footer p {
     background-color: #f0f0f0;
 }
 
-
-
-
-
 /*RESPONSIVE*/
 /*Pantallas 1366x768 */
 @media (max-width: 1366px) {
@@ -555,7 +524,7 @@ footer p {
     nav {
         position: absolute;
         left: -7px;
-        margin-top: -10px;
+        top: 100px;
         display: flex;
         /*Flex para apilar botones */
         flex-direction: column;
@@ -563,9 +532,8 @@ footer p {
         margin-bottom: 20px;
     }
 
-    .authenticated nav {
-        margin-top: 20px;
-        gap: 10px;
+    .authenticated .nav-grid {
+        margin-top: 177px;
     }
 
     .nav-btn {
@@ -575,16 +543,9 @@ footer p {
 
     .nav-btn {
         width: 250px;
-        margin-bottom: 0px;
+        margin-bottom: 10px;
         text-decoration: none;
     }
-
-    .authenticated .nav-group {
-        margin-top: 246px;
-        gap: 10px;
-    }
-
-    .authenticated .nav-btn {}
 
     .login {
         position: absolute;
@@ -603,11 +564,11 @@ footer p {
 
     .novedades h1 {
         font-size: 28px;
-        margin-left: 130px;
+        margin-left: 90px;
     }
 
     .authenticated .novedades h1 {
-        margin-top: 320px;
+        margin-top: 300px;
     }
 
     .cards-contenedor {
@@ -619,7 +580,6 @@ footer p {
         margin: 0 auto;
         margin-bottom: 40px;
         margin-left: 0px;
-
     }
 
     .card {
@@ -637,12 +597,11 @@ footer p {
     .authenticated .cards-contenedor {
         gap: 50px;
         margin-top: 15px;
-
     }
 
     .carousel-container {
         position: absolute;
-        margin-top: -120px;
+        margin-top: -80px;
         margin-left: 320px;
         width: 70%;
         max-height: 300px;
@@ -653,7 +612,7 @@ footer p {
     }
 
     .authenticated .carousel-container {
-        margin-top: -120px;
+        margin-top: -150px;
     }
 
     #carousel-item-chico img {
@@ -661,7 +620,6 @@ footer p {
         object-fit: cover;
         border-radius: 10px;
     }
-
 
     .carousel-control-prev,
     .carousel-control-next {
@@ -681,7 +639,6 @@ footer p {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        /* Alinea a la izquierda */
         margin: 40px 20px;
     }
 
@@ -694,41 +651,24 @@ footer p {
     nav {
         position: absolute;
         left: -7px;
-        margin-top: -10px;
+        top: 100px;
         display: flex;
-        /*Flex para apilar botones */
         flex-direction: column;
         align-items: flex-start;
         margin-bottom: 20px;
     }
 
-    .authenticated nav {
-        margin-top: 20px;
-        gap: 10px;
-    }
-
-    .nav-btn {
-
-        /* Oculta el contenido del */
-    }
+    .nav-btn {}
 
     .nav-btn {
         width: 250px;
-        margin-bottom: 0px;
-        text-decoration: none;
+        margin-bottom: 10px;
     }
-
-    .authenticated .nav-group {
-        margin-top: 246px;
-        gap: 10px;
-    }
-
-    .authenticated .nav-btn {}
 
     .login {
         position: absolute;
         left: 20px;
-        top: 400px;
+        margin-top: 40px;
     }
 
     .novedades {
@@ -742,22 +682,19 @@ footer p {
 
     .novedades h1 {
         font-size: 28px;
-        margin-left: 130px;
-    }
-
-    .authenticated .novedades h1 {
-        margin-top: 320px;
+        margin-top: 20px;
+        margin-left: 90px;
     }
 
     .cards-contenedor {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        gap: 50px;
+        gap: 30px;
         max-width: 1000px;
         margin: 0 auto;
         margin-bottom: 40px;
-        margin-left: 0px;
+        margin-left: -20px;
 
     }
 
@@ -771,17 +708,17 @@ footer p {
 
     .authenticated .card {
         height: 300px;
+
     }
 
     .authenticated .cards-contenedor {
         gap: 50px;
-        margin-top: 15px;
 
     }
 
     .carousel-container {
         position: absolute;
-        margin-top: -120px;
+        margin-top: -90px;
         margin-left: 320px;
         width: 70%;
         max-height: 300px;
@@ -791,16 +728,12 @@ footer p {
         border-radius: 10px;
     }
 
-    .authenticated .carousel-container {
-        margin-top: -120px;
-    }
 
-    #carousel-item-chico img {
-        height: 150px;
+    .carousel-item img {
+        height: 270px;
         object-fit: cover;
         border-radius: 10px;
     }
-
 
     .carousel-control-prev,
     .carousel-control-next {
@@ -820,7 +753,6 @@ footer p {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        /* Alinea a la izquierda */
         margin: 40px 20px;
     }
 
@@ -833,47 +765,31 @@ footer p {
     nav {
         position: absolute;
         left: -7px;
-        margin-top: -10px;
+        top: 100px;
         display: flex;
-        /*Flex para apilar botones */
         flex-direction: column;
         align-items: flex-start;
         margin-bottom: 20px;
     }
 
-    .authenticated nav {
-        margin-top: 20px;
-        gap: 10px;
-    }
-
-    .nav-btn {
-
-        /* Oculta el contenido del */
-    }
+    .nav-btn {}
 
     .nav-btn {
         width: 250px;
-        margin-bottom: 0px;
-        text-decoration: none;
+        margin-bottom: 10px;
     }
-
-    .authenticated .nav-group {
-        margin-top: 246px;
-        gap: 10px;
-    }
-
-    .authenticated .nav-btn {}
 
     .login {
         position: absolute;
         left: 20px;
-        top: 400px;
+        margin-top: 40px;
     }
 
     .novedades {
         width: 100%;
         text-align: center;
         margin: 200px 350px 100px;
+        margin-left: 300px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -881,22 +797,22 @@ footer p {
 
     .novedades h1 {
         font-size: 28px;
-        margin-left: 130px;
+        margin-left: 140px;
     }
 
     .authenticated .novedades h1 {
-        margin-top: 320px;
+        margin-top: 25px;
     }
 
     .cards-contenedor {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        gap: 50px;
+        gap: 30px;
         max-width: 1000px;
         margin: 0 auto;
         margin-bottom: 40px;
-        margin-left: 0px;
+        margin-left: 20px;
 
     }
 
@@ -908,19 +824,17 @@ footer p {
         height: 300px;
     }
 
-    .authenticated .card {
-        height: 300px;
-    }
-
     .authenticated .cards-contenedor {
         gap: 50px;
-        margin-top: 15px;
+    }
 
+    .authenticated .novedades {
+        margin-top: 225px;
     }
 
     .carousel-container {
         position: absolute;
-        margin-top: -120px;
+        margin-top: -90px;
         margin-left: 320px;
         width: 70%;
         max-height: 300px;
@@ -930,16 +844,12 @@ footer p {
         border-radius: 10px;
     }
 
-    .authenticated .carousel-container {
-        margin-top: -120px;
-    }
 
-    #carousel-item-chico img {
-        height: 150px;
+    .carousel-item img {
+        height: 270px;
         object-fit: cover;
         border-radius: 10px;
     }
-
 
     .carousel-control-prev,
     .carousel-control-next {
@@ -950,6 +860,12 @@ footer p {
 
     .footer {
         position: relative;
+        font-family: Inter;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 19.36px;
+        text-align: left;
+
     }
 
 
