--- a/public/css/principal-nueva.css
+++ b/public/css/principal-nueva.css
@@ -149,6 +149,10 @@ nav {
     color: #004a99;
 }
 
+#novedades-principal {
+    margin-left: 107px;
+}
+
 #powerbi-principal {
     margin-left: 128px;
 }
@@ -231,9 +235,13 @@ nav {
     margin-left: 131px;
 }
 
+.authenticated .nav {
+    margin-top: -20px;
+}
+
 /*LUEGO DE LOGUEARSE*/
 .authenticated .nav-btn {
-    margin-top: -5px;
+    margin-top: -7px;
 }
 
 .authenticated .carousel-item img {
@@ -256,7 +264,7 @@ nav {
 
 .authenticated .carousel-container {
     height: 550px;
-    margin-top: -330px;
+    margin-top: -400px;
 }
 
 .authenticated .carousel-container img {
@@ -288,7 +296,7 @@ nav {
     text-align: center;
     height: 330px;
     width: 300px;
-    margin-top: 65px;
+    margin-top: 10px;
 }
 
 .login h2 {
@@ -363,7 +371,7 @@ nav {
 /*CAROUSEL*/
 .carousel-container {
     position: absolute;
-    margin-top: -380px;
+    margin-top: -425px;
     margin-left: 382px;
     width: 77%;
     max-height: 340px;
@@ -398,7 +406,7 @@ nav {
 }
 
 .novedades h1 {
-    margin-top: 53px;
+    margin-top: 0px;
     /*53*/
     margin-bottom: 10px;
     color: #196AB2;
@@ -533,7 +541,7 @@ footer p {
     }
 
     .authenticated .nav-grid {
-        margin-top: 177px;
+        margin-top: 220px;
     }
 
     .nav-btn {
@@ -543,8 +551,12 @@ footer p {
 
     .nav-btn {
         width: 250px;
-        margin-bottom: 10px;
+        margin-bottom: -1px;
         text-decoration: none;
+    }
+
+    .authenticated .nav-btn {
+        margin-bottom: 10px;
     }
 
     .login {
@@ -601,7 +613,7 @@ footer p {
 
     .carousel-container {
         position: absolute;
-        margin-top: -80px;
+        margin-top: -120px;
         margin-left: 320px;
         width: 70%;
         max-height: 300px;
@@ -660,8 +672,14 @@ footer p {
 
     .nav-btn {}
 
+
     .nav-btn {
         width: 250px;
+        margin-bottom: -1px;
+        text-decoration: none;
+    }
+
+    .authenticated .nav-btn {
         margin-bottom: 10px;
     }
 
@@ -772,10 +790,13 @@ footer p {
         margin-bottom: 20px;
     }
 
-    .nav-btn {}
-
     .nav-btn {
         width: 250px;
+        margin-bottom: -1px;
+        text-decoration: none;
+    }
+
+    .authenticated .nav-btn {
         margin-bottom: 10px;
     }
 
