--- a/public/css/principal-nueva.css
+++ b/public/css/principal-nueva.css
@@ -4,6 +4,66 @@
     box-sizing: border-box;
 }
 
+/* Estilos del encabezado */
+.header-icon {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+
+}
+
+.menu {
+    display: flex;
+    justify-content: right;
+    align-items: right;
+    width: 100%;
+
+}
+
+
+.menu a {
+    margin: 0;
+    color: white;
+    text-decoration: none;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
+
+
+}
+
+.header-icon img {
+    width: 60px;
+    height: 60px;
+}
+
+.page-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: linear-gradient(90deg, white 14%, #1C547C 85%, #1E78C8 100%);
+    padding: 20px;
+    text-align: center;
+    z-index: 10;
+    height: 80px;
+}
+
+.page-header h1 {
+    font-size: 2.5rem;
+    color: #343a40;
+}
+
+.page-header .subtitulo {
+    font-size: 1.2rem;
+    color: #6c757d;
+}
+
+.page-header .btn {
+    margin-top: 10px;
+}
+
+/*-----------------------------------------*/
+
 .btn-cs {
     height: 45px;
     width: 120px;
@@ -98,7 +158,7 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin: 20px 0;
+    margin-top: 150px;
     gap: 2px;
 }
 
@@ -142,6 +202,7 @@ nav {
     text-align: left;
     margin-left: 54px;
     text-decoration: none;
+    margin-top: -2px;
 }
 
 .nav-btn:hover {
@@ -296,7 +357,7 @@ nav {
     text-align: center;
     height: 330px;
     width: 300px;
-    margin-top: 10px;
+    margin-top: 65px;
 }
 
 .login h2 {
@@ -371,7 +432,7 @@ nav {
 /*CAROUSEL*/
 .carousel-container {
     position: absolute;
-    margin-top: -425px;
+    margin-top: -350px;
     margin-left: 382px;
     width: 77%;
     max-height: 340px;
@@ -406,7 +467,7 @@ nav {
 }
 
 .novedades h1 {
-    margin-top: 0px;
+    margin-top: 55px;
     /*53*/
     margin-bottom: 10px;
     color: #196AB2;
@@ -471,6 +532,7 @@ nav {
 /* FOOTER */
 footer {
     background: linear-gradient(90deg, #1C547C 0%, #1E78C8 100%);
+
     color: white;
     text-align: center;
     padding: 20px;
