--- a/public/css/principal-nueva.css
+++ b/public/css/principal-nueva.css
@@ -296,19 +296,25 @@ nav {
     margin-left: 131px;
 }
 
-.authenticated .nav {
-    gap: 2px;
-   
-}
+.authenticated .nav {}
 
 /*LUEGO DE LOGUEARSE*/
 .authenticated .nav-btn {
-   
-    margin-top: -7px;
+    margin-top: -25px;
 }
+
 .authenticated .nav-grid {
+    /*grid*/
     margin-top: 20px;
+    gap: 2px;
 }
+
+.authenticated .nav-grid a {
+    /*botones del grid*/
+    margin-top: -7px;
+    gap: 2px;
+}
+
 .authenticated .carousel-item img {
     height: 180px;
     object-fit: cover;
@@ -317,8 +323,9 @@ nav {
 .authenticated .novedades {
     margin-top: -37px;
 }
+
 .authenticated .novedades h1 {
-    margin-top: 40px;
+    margin-top: 55px;
 }
 
 .authenticated .card {
@@ -332,7 +339,7 @@ nav {
 
 .authenticated .carousel-container {
     height: 550px;
-    margin-top: -335px;
+    margin-top: -315px;
 }
 
 .authenticated .carousel-container img {
@@ -601,7 +608,7 @@ footer p {
     nav {
         position: absolute;
         left: -7px;
-        top: 100px;
+        margin-top: 70px;
         display: flex;
         /*Flex para apilar botones */
         flex-direction: column;
@@ -610,7 +617,7 @@ footer p {
     }
 
     .authenticated .nav-grid {
-        margin-top: 220px;
+        margin-top: 345px;
     }
 
     .nav-btn {
@@ -631,7 +638,7 @@ footer p {
     .login {
         position: absolute;
         left: 20px;
-        top: 400px;
+        top: 450px;
     }
 
     .novedades {
@@ -646,10 +653,11 @@ footer p {
     .novedades h1 {
         font-size: 28px;
         margin-left: 90px;
+        margin-top: 180px;
     }
 
     .authenticated .novedades h1 {
-        margin-top: 300px;
+        margin-top: 480px;
     }
 
     .cards-contenedor {
@@ -660,7 +668,7 @@ footer p {
         max-width: 1000px;
         margin: 0 auto;
         margin-bottom: 40px;
-        margin-left: 0px;
+        margin-left: -20px;
     }
 
     .card {
@@ -678,11 +686,12 @@ footer p {
     .authenticated .cards-contenedor {
         gap: 50px;
         margin-top: 15px;
+        margin-left: -20px;
     }
 
     .carousel-container {
         position: absolute;
-        margin-top: -120px;
+        margin-top: 55px;
         margin-left: 320px;
         width: 70%;
         max-height: 300px;
@@ -693,7 +702,7 @@ footer p {
     }
 
     .authenticated .carousel-container {
-        margin-top: -150px;
+        margin-top: 45px;
     }
 
     #carousel-item-chico img {
@@ -710,7 +719,9 @@ footer p {
     }
 
     .footer {
-        position: relative;
+        /*position: relative;*/
+        width: auto;
+        height: 5px;
     }
 }
 
@@ -720,6 +731,7 @@ footer p {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        /* Alinea a la izquierda */
         margin: 40px 20px;
     }
 
@@ -732,15 +744,22 @@ footer p {
     nav {
         position: absolute;
         left: -7px;
-        top: 100px;
+        margin-top: 70px;
         display: flex;
+        /*Flex para apilar botones */
         flex-direction: column;
         align-items: flex-start;
         margin-bottom: 20px;
     }
 
-    .nav-btn {}
+    .authenticated .nav-grid {
+        margin-top: 345px;
+    }
 
+    .nav-btn {
+
+        /* Oculta el contenido del */
+    }
 
     .nav-btn {
         width: 250px;
@@ -755,7 +774,7 @@ footer p {
     .login {
         position: absolute;
         left: 20px;
-        margin-top: 40px;
+        top: 450px;
     }
 
     .novedades {
@@ -769,20 +788,23 @@ footer p {
 
     .novedades h1 {
         font-size: 28px;
-        margin-top: 20px;
         margin-left: 90px;
+        margin-top: 180px;
+    }
+
+    .authenticated .novedades h1 {
+        margin-top: 480px;
     }
 
     .cards-contenedor {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        gap: 30px;
+        gap: 50px;
         max-width: 1000px;
         margin: 0 auto;
         margin-bottom: 40px;
         margin-left: -20px;
-
     }
 
     .card {
@@ -795,17 +817,17 @@ footer p {
 
     .authenticated .card {
         height: 300px;
-
     }
 
     .authenticated .cards-contenedor {
         gap: 50px;
-
+        margin-top: 15px;
+        margin-left: -20px;
     }
 
     .carousel-container {
         position: absolute;
-        margin-top: -90px;
+        margin-top: 55px;
         margin-left: 320px;
         width: 70%;
         max-height: 300px;
@@ -815,9 +837,12 @@ footer p {
         border-radius: 10px;
     }
 
+    .authenticated .carousel-container {
+        margin-top: 45px;
+    }
 
-    .carousel-item img {
-        height: 270px;
+    #carousel-item-chico img {
+        height: 150px;
         object-fit: cover;
         border-radius: 10px;
     }
@@ -830,7 +855,9 @@ footer p {
     }
 
     .footer {
-        position: relative;
+        /*position: relative;*/
+        width: auto;
+        height: 5px;
     }
 }
 
@@ -840,6 +867,7 @@ footer p {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        /* Alinea a la izquierda */
         margin: 40px 20px;
     }
 
@@ -852,11 +880,21 @@ footer p {
     nav {
         position: absolute;
         left: -7px;
-        top: 100px;
+        margin-top: 70px;
         display: flex;
+        /*Flex para apilar botones */
         flex-direction: column;
         align-items: flex-start;
         margin-bottom: 20px;
+    }
+
+    .authenticated .nav-grid {
+        margin-top: 345px;
+    }
+
+    .nav-btn {
+
+        /* Oculta el contenido del */
     }
 
     .nav-btn {
@@ -872,14 +910,13 @@ footer p {
     .login {
         position: absolute;
         left: 20px;
-        margin-top: 40px;
+        top: 450px;
     }
 
     .novedades {
         width: 100%;
         text-align: center;
         margin: 200px 350px 100px;
-        margin-left: 300px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -887,23 +924,24 @@ footer p {
 
     .novedades h1 {
         font-size: 28px;
-        margin-left: 140px;
+        margin-left: 50px;
+        margin-top: 180px;
     }
 
     .authenticated .novedades h1 {
-        margin-top: 25px;
+        margin-top: 480px;
+
     }
 
     .cards-contenedor {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        gap: 30px;
+        gap: 50px;
         max-width: 1000px;
         margin: 0 auto;
         margin-bottom: 40px;
-        margin-left: 20px;
-
+        margin-left: -40px;
     }
 
     .card {
@@ -914,17 +952,19 @@ footer p {
         height: 300px;
     }
 
-    .authenticated .cards-contenedor {
-        gap: 50px;
+    .authenticated .card {
+        height: 300px;
     }
 
-    .authenticated .novedades {
-        margin-top: 225px;
+    .authenticated .cards-contenedor {
+        gap: 50px;
+        margin-top: 15px;
+        margin-left: -40px;
     }
 
     .carousel-container {
         position: absolute;
-        margin-top: -90px;
+        margin-top: 55px;
         margin-left: 320px;
         width: 70%;
         max-height: 300px;
@@ -934,9 +974,12 @@ footer p {
         border-radius: 10px;
     }
 
+    .authenticated .carousel-container {
+        margin-top: 45px;
+    }
 
-    .carousel-item img {
-        height: 270px;
+    #carousel-item-chico img {
+        height: 150px;
         object-fit: cover;
         border-radius: 10px;
     }
@@ -949,14 +992,8 @@ footer p {
     }
 
     .footer {
-        position: relative;
-        font-family: Inter;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 19.36px;
-        text-align: left;
-
+        /*position: relative;*/
+        width: auto;
+        height: 5px;
     }
-
-
 }
